fixed cards alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ body {
 .flip-card-front,
 .flip-card-back {
   display: flex;
+  flex-direction: column;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -80,6 +81,7 @@ body {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+  padding: 15%;
 }
 
 .footer {
